ufw (0.21) UNRELEASED; urgency=low

  * add confirmation on enable when running under ssh (LP: #253840)
  * update ufw.pot
  * fix some pygettext errors
  * warn if profile name is found in /etc/services
  * don't delete application rules when the action doesn't match
    (LP: #260881)

 -- Jamie Strandboge <jamie@ubuntu.com>  Mon, 18 Aug 2008 20:22:32 -0400

ufw (0.20) intrepid; urgency=low

  * add 'verbose' option to status command
  * implement application (package) integration
  * update run_tests.sh to honor subclass
  * debian/control: Depends on iptables >= 1.4.0 for ipv6 comment support

 -- Jamie Strandboge <jamie@ubuntu.com>  Thu, 07 Aug 2008 12:04:05 -0400

ufw (0.19) intrepid; urgency=low

  * don't modify the chains when --dry-run is specified (LP: #247352)
  * add dotted netmask support
  * don't have util.py import common.py
  * normalize rules so what is added to chains and what is displayed to the
    user is consistent (LP: #237446)
  * documentation updates (LP: #247177)
  * implement port ranges (LP: #231103)
  * fix initscript to properly set default DROP when ipv6 is available and
    set to 'no' in /etc/default/ufw (LP: #251355)
  * don't give confusing output when ipv6 and/or ip6_tables is not
    available (LP: #194844)
  * update ucf historical checksums to include those in 0.16.2
  * update manpage for 'status' clarifications (LP: #251153)
  * update before*.rules to count outgoing packets on lo (LP: #255092)
  * update status output so it is more consistent with rule syntax

 -- Jamie Strandboge <jamie@ubuntu.com>  Mon, 07 Jul 2008 16:22:45 -0400

ufw (0.18) intrepid; urgency=low

  * bump version
  * src/ufw: make reusable
  * src/ufw: show default policy and logging in 'status' (LP: #240271)
  * refactor code and split out into modules:
    - updated src/*
    - updated setup.py
    - updated run_tests.sh
    - updated README
    - updated README.translations and messages/ufw.pot
    - updated README.Design