@@ -1,6 +1,7 @@
 ufw (0.21) UNRELEASED; urgency=low
 
   * add confirmation on enable when running under ssh (LP: #253840)
+  * don't reload the firewall on 'app update' when running under ssh
   * update ufw.pot
   * fix some pygettext errors
   * warn if profile name is found in /etc/services
